Let this rest for a while...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ diesel = { version = "2.1", features = ["postgres", "r2d2"] }
 # https://diesel.rs/guides/getting-started/#migrations
 diesel_migrations = "2.1"
 
+# https://serde.rs/
+serde = "1.0"
+serde_json = "1.0"
+
 r2d2 = "0.8"
 dotenv = "0.15"
 
