--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://pguser:pgpasswd@postgres/vrtstorage
-REST_PORT=4200
+DATABASE_URL=postgres://pguser:pgpasswd@postgres:5431/vrtstorage
+REST_PORT=5252
