--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,24 @@ tower = { version = "0.4", features = ["full"] }
 tokio = { version = "1.32", features = ["full"] }
 
 # https://diesel.rs/
-diesel = { version = "2.1", features = ["postgres", "r2d2"] }
+diesel = { version = "2.1", features = ["postgres"] }
 # Also: cargo install diesel_cli --no-default-features --features postgres
 
 # https://diesel.rs/guides/getting-started/#migrations
 diesel_migrations = "2.1"
 
+# https://github.com/bikeshedder/deadpool
+deadpool-diesel = { version = "0.4", features = ["postgres"] }
+
 # https://serde.rs/
 serde = "1.0"
 serde_json = "1.0"
 
-r2d2 = "0.8"
-dotenv = "0.15"
+# https://github.com/allan2/dotenvy
+dotenvy = "0.15"
+
+# https://github.com/chronotope/chrono
+chrono = "0.4"
 
 [dev-dependencies]
 
