Plenty of trying stuff and seeing what happens, to make database queries possible for users

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://pguser:pgpasswd@postgres:5431/vrtstorage
+DATABASE_URL=postgres://pguser:pgpasswd@127.0.0.1:5431/vrtstorage
 REST_PORT=5252
