--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,14 @@ edition = "2021"
 
 [dependencies]
 # https://github.com/tokio-rs/axum
-axum = "0.6"
+axum = { version = "0.6", features = ["macros"] }
 tower = { version = "0.4", features = ["full"] }
 
 # https://tokio.rs/
 tokio = { version = "1.32", features = ["full"] }
 
 # https://diesel.rs/
-diesel = { version = "2.1", features = ["postgres"] }
+diesel = { version = "2.1", features = ["postgres", "chrono"] }
 # Also: cargo install diesel_cli --no-default-features --features postgres
 
 # https://diesel.rs/guides/getting-started/#migrations
@@ -26,14 +26,23 @@ diesel_migrations = "2.1"
 deadpool-diesel = { version = "0.4", features = ["postgres"] }
 
 # https://serde.rs/
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # https://github.com/allan2/dotenvy
 dotenvy = "0.15"
 
 # https://github.com/chronotope/chrono
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+
+# Tracer to get output only when needed
+# https://crates.io/crates/tracing
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Wanna have random return results while developing
+# https://crates.io/crates/rand
+rand = "0.8"
 
 [dev-dependencies]
 
